[project]
name = "comfyui_cryptocat_fork"
description = "a lightweight open-source node for ComfyUI, designed to simplify workflows while providing encryption protection for them."
version = "2.2.1"
license = {file = "LICENSE"}
dependencies = ["aiohttp", "pyzipper", "websockets"]

[project.urls]
Repository = "https://github.com/robinjhuang/ComfyUI_CryptoCat_Fork"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "robinjhuang"
DisplayName = "ComfyUI_CryptoCat_Fork"
Icon = "https://www.riceround.online/CryptoCat.svg"
